--- a/src/lib/packages/styles/src/index.sass
+++ b/src/lib/packages/styles/src/index.sass
@@ -1,1 +1,7 @@
-@import './vars/colors', './vars/sizes'
+@import './vars/index'
+
+*
+    box-sizing: border-box
+
+body
+    font-family: var(--font-family)
