add a TextField and Password field

--- a/src/lib/packages/styles/src/vars/colors.sass
+++ b/src/lib/packages/styles/src/vars/colors.sass
@@ -1,2 +1,10 @@
 @mixin vars-colors()
     --color-blue-500: #fff
+
+    --color-txt-placeholder: #B0B2C0
+
+    --color-button-action-bg-disabled: #E8E9ED
+
+    --color-border-disabled: #E8E9ED
+
+    --color-bg-secondary: #F3F3F7
