--- a/src/lib/packages/styles/src/vars/colors.sass
+++ b/src/lib/packages/styles/src/vars/colors.sass
@@ -6,5 +6,9 @@
     --color-button-action-bg-disabled: #E8E9ED
 
     --color-border-disabled: #E8E9ED
+    --color-border: #B0B2C0
+
+    --color-icon: #32343F
+    --color-icon-secondary: #5F6377
 
     --color-bg-secondary: #F3F3F7
