refactor: update css vars and add fonts

--- a/src/lib/packages/styles/src/index.sass
+++ b/src/lib/packages/styles/src/index.sass
@@ -1,7 +1,8 @@
 @import './vars/index'
+@import './fonts/index'
+
++fonts-inter()
 
 *[class^="Clue"]
     box-sizing: border-box
-
-body
-    font-family: var(--font-family)
+    font-family: var(--clue-font-family)
