--- a/src/lib/packages/styles/src/vars/colors.sass
+++ b/src/lib/packages/styles/src/vars/colors.sass
@@ -1,14 +1,14 @@
 @mixin vars-colors()
-    --color-blue-500: #fff
+    --clue-color-blue-500: #fff
 
-    --color-txt-placeholder: #B0B2C0
+    --clue-color-txt-placeholder: #B0B2C0
 
-    --color-button-action-bg-disabled: #E8E9ED
+    --clue-color-button-action-bg-disabled: #E8E9ED
 
-    --color-border-disabled: #E8E9ED
-    --color-border: #B0B2C0
+    --clue-color-border-disabled: #E8E9ED
+    --clue-color-border: #B0B2C0
 
-    --color-icon: #32343F
-    --color-icon-secondary: #5F6377
+    --clue-color-icon: #32343F
+    --clue-color-icon-secondary: #5F6377
 
-    --color-bg-secondary: #F3F3F7
+    --clue-color-bg-secondary: #F3F3F7
