--- a/src/lib/packages/styles/src/vars/transitions.sass
+++ b/src/lib/packages/styles/src/vars/transitions.sass
@@ -1,4 +1,4 @@
 @mixin vars-transitions()
-    --transition-duration: .2s
-    --transition-timing-function: ease-in-out
-    --transition: var(--transition-duration) var(--transition-timing-function)
+    --clue-transition-duration: .2s
+    --clue-transition-timing-function: ease-in-out
+    --clue-transition: var(--clue-transition-duration) var(--clue-transition-timing-function)
