--- a/src/lib/packages/styles/src/vars/sizes.sass
+++ b/src/lib/packages/styles/src/vars/sizes.sass
@@ -1,3 +1,3 @@
 @mixin vars-sizes()
-    --size-border-radius: 16px
-    --size-border-radius-3: 15px
+    --clue-size-border-radius: 16px
+    --clue-size-border-radius-3: 15px
