--- a/src/lib/packages/base/src/Button/ButtonField.scss
+++ b/src/lib/packages/base/src/Button/ButtonField.scss
@@ -1,131 +1,184 @@
 @use "sass:map";
 @use 'sass:list';
 
-@mixin button-field-color($list, $name: '') {
-    $bg: list.nth($list, 1);
-    $color: list.nth($list, 2);
-    $border: list.nth($list, 3);
+@mixin button-field-color-variants($map, $color: '') {
+    $variants: 'ghost', 'outlined';
 
-    $postfix: '';
+    @each $variant in $variants {
+        $root: '--clue-button-field-c-#{$color}-v-#{$variant}';
+        //background-color
+        @if $variant == 'outlined' {
+            #{$root}-background-color: #{map.get($map, $variant, 'background-color', 'base')};
+            #{$root}-background-color-disabled: #{map.get($map, $variant, 'background-color', 'disabled')};
+        };
+        #{$root}-background-color-hover: #{map.get($map, $variant, 'background-color', 'hover')};
+        #{$root}-background-color-active: #{map.get($map, $variant, 'background-color', 'active')};
+
+        //color
+        #{$root}-color: #{map.get($map, $variant, 'color', 'base')};
+        #{$root}-color-hover: #{map.get($map, $variant, 'color', 'hover')};
+        #{$root}-color-active: #{map.get($map, $variant, 'color', 'active')};
+    };
+}
+
+@mixin button-field-color($map, $name: '') {
+    $colorPostfix: '';
 
     @if $name != '' {
-        $postfix: '-c-#{$name}'
+        $colorPostfix: '-c-#{$name}'
     }
 
-    $root: '--clue-button-field#{$postfix}';
+    $root: '--clue-button-field#{$colorPostfix}';
 
     //background color
-    #{$root}-background-color: #{map.get($bg, 'base')};
-    #{$root}-background-color-hover: #{map.get($bg, 'hover')};
-    #{$root}-background-color-active: #{map.get($bg, 'active')};
-    #{$root}-background-color-disabled: #{map.get($bg, 'disabled')};
+    #{$root}-background-color: #{map.get($map, 'background-color', 'base')};
+    #{$root}-background-color-hover: #{map.get($map, 'background-color', 'hover')};
+    #{$root}-background-color-active: #{map.get($map, 'background-color', 'active')};
+    #{$root}-background-color-disabled: #{map.get($map, 'background-color', 'disabled')};
     //color
-    #{$root}-color: #{map.get($color, 'base')};
-    #{$root}-color-hover: #{map.get($color, 'hover')};
-    #{$root}-color-active: #{map.get($color, 'active')};
-    #{$root}-color-disabled: #{map.get($color, 'disabled')};
+    #{$root}-color: #{map.get($map, 'color', 'base')};
+    #{$root}-color-hover: #{map.get($map, 'color', 'hover')};
+    #{$root}-color-active: #{map.get($map, 'color', 'active')};
+    #{$root}-color-disabled: #{map.get($map, 'color', 'disabled')};
     //border
-    #{$root}-border-color: #{map.get($border, 'base')};
-    #{$root}-border-color-hover: #{map.get($border, 'hover')};
-    #{$root}-border-color-active: #{map.get($border, 'active')};
-    #{$root}-border-color-disabled: #{map.get($border, 'disabled')};
+    #{$root}-border-color: #{map.get($map, 'border-color', 'base')};
+    #{$root}-border-color-hover: #{map.get($map, 'border-color', 'hover')};
+    #{$root}-border-color-active: #{map.get($map, 'border-color', 'active')};
+    #{$root}-border-color-disabled: #{map.get($map, 'border-color', 'disabled')};
 };
 
 @mixin button-field-c-action-vars() {
-    @include button-field-color(((
-        'base': #EECD47,
-        'hover': #EAC11A,
-        'active': #EAC11A,
-        'disabled': var(--clue-button-field-background-color-disabled)
-    ), (
-        'base': #1B1C22,
-        'hover': #1B1C22,
-        'active': #1B1C22,
-        'disabled': var(--clue-button-field-color-disabled)
-    ), (
-        'base': var(--clue-button-field-border-color),
-        'hover': var(--clue-button-field-border-color-hover),
-        'active': var(--clue-button-field-border-color-active),
-        'disabled': var(--clue-button-field-border-color-disabled)
-    )), 'action');
+    @include button-field-color((
+        'background-color': (
+            'base': #EECD47,
+            'hover': #EAC11A,
+            'active': #EAC11A,
+            'disabled': var(--clue-button-field-background-color-disabled)
+        ),
+        'color': (
+            'base': #1B1C22,
+            'hover': #1B1C22,
+            'active': #1B1C22,
+            'disabled': var(--clue-button-field-color-disabled)
+        ),
+        'border-color': (
+            'base': var(--clue-button-field-border-color),
+            'hover': var(--clue-button-field-border-color-hover),
+            'active': var(--clue-button-field-border-color-active),
+            'disabled': var(--clue-button-field-border-color-disabled)
+        )
+    ), 'action');
 }
 
 @mixin button-field-c-secondary-vars() {
-    @include button-field-color(((
-        'base': #E6E3F2,
-        'hover': #DDD9ED,
-        'active': #DDD9ED,
-        'disabled': var(--clue-button-field-background-color-disabled)
-    ), (
-        'base': #5B4C9F,
-        'hover': #5B4C9F,
-        'active': #5B4C9F,
-        'disabled': var(--clue-button-field-color-disabled)
-    ), (
-        'base': var(--clue-button-field-border-color),
-        'hover': var(--clue-button-field-border-color-hover),
-        'active': var(--clue-button-field-border-color-active),
-        'disabled': var(--clue-button-field-border-color-disabled)
-    )), 'secondary');
-}
-
-@mixin button-field-c-ghost-vars() {
-    @include button-field-color(((
-        'base': transparent,
-        'hover': #EFEEF7,
-        'active': #EFEEF7,
-        'disabled': transparent
-    ), (
-        'base': #5B4C9F,
-        'hover': #5B4C9F,
-        'active': #5B4C9F,
-        'disabled': var(--clue-button-field-color-disabled)
-    ), (
-        'base': #D3CFE8,
-        'hover': #D3CFE8,
-        'active': #D3CFE8,
-        'disabled': var(--clue-button-field-border-color-disabled)
-    )), 'ghost');
+    @include button-field-color((
+        'background-color': (
+            'base': #E6E3F2,
+            'hover': #DDD9ED,
+            'active': #DDD9ED,
+            'disabled': var(--clue-button-field-background-color-disabled)
+        ),
+        'color': (
+            'base': #5B4C9F,
+            'hover': #5B4C9F,
+            'active': #5B4C9F,
+            'disabled': var(--clue-button-field-color-disabled)
+        ),
+        'border-color': (
+            'base': #D3CFE8,
+            'hover': #D3CFE8,
+            'active': #D3CFE8,
+            'disabled': transparent
+        )
+    ), 'secondary');
+    @include button-field-color-variants((
+        'ghost': (
+            'background-color': (
+                'hover': #EFEEF7,
+                'active': #EFEEF7,
+            ),
+            'color': (
+                'base': #5B4C9F,
+                'hover': #5B4C9F,
+                'active': #5B4C9F,
+            )
+        ),
+        'outlined': (
+            'background-color': (
+                'base': transparent,
+                'hover': #EFEEF7,
+                'active': #EFEEF7,
+                'disabled': transparent,
+            ),
+            'color': (
+                'base': #5B4C9F,
+                'hover': #5B4C9F,
+                'active': #5B4C9F,
+            )
+        )
+    ), 'secondary')
 }
 
 @mixin button-field-vars() {
     //BASE
-    @include button-field-color(((
-        'base': #5B4C9F,
-        'hover': #473B7C,
-        'active': #4F428A,
-        'disabled': #E8E9ED
-    ), (
-        'base': #EFEEF7,
-        'hover': #EFEEF7,
-        'active': #EFEEF7,
-        'disabled': #B0B2C0
-    ), (
-        'base': transparent,
-        'hover': transparent,
-        'active': transparent,
-        'disabled': transparent
-    )));
+    @include button-field-color((
+        'background-color': (
+            'base': #5B4C9F,
+            'hover': #473B7C,
+            'active': #4F428A,
+            'disabled': #E8E9ED
+        ),
+        'color': (
+            'base': #EFEEF7,
+            'hover': #EFEEF7,
+            'active': #EFEEF7,
+            'disabled': #B0B2C0
+        ),
+        'border-color': (
+            'base': transparent,
+            'hover': transparent,
+            'active': transparent,
+            'disabled': transparent
+        )
+    ));
 
     @include button-field-c-action-vars();
     @include button-field-c-secondary-vars();
-    @include button-field-c-ghost-vars();
 }
 
-@mixin button-field-apply-color-vars($color: 'action') {
+@mixin button-field-apply-color-vars($color: 'action', $variant: '') {
     $states: '', '-hover', '-active', '-disabled';
+    $root: '--clue-button-field-c-#{$color}';
     //background color
     @each $state in $states {
-        --background-color#{$state}: #{'var(--clue-button-field-c-#{$color}-background-color#{$state})'};
+        --background-color#{$state}: #{'var(#{$root}-background-color#{$state})'};
     }
 
     //color
     @each $state in $states {
-        --color#{$state}: #{'var(--clue-button-field-c-#{$color}-color#{$state})'};
+        --color#{$state}: #{'var(#{$root}-color#{$state})'};
     }
 
     //border-color
     @each $state in $states {
-        --border-color#{$state}: #{'var(--clue-button-field-c-#{$color}-border-color#{$state})'};
+        --border-color#{$state}: #{'var(#{$root}-border-color#{$state})'};
+    }
+
+    $variants: 'ghost', 'outlined';
+
+    @each $variant in $variants {
+        $rootWithVariant: '#{$root}-v-#{$variant}';
+        //background-color
+        @if $variant == 'outlined' {
+            --v-#{$variant}-background-color: #{'var(#{$rootWithVariant}-background-color)'};
+            --v-#{$variant}-background-color-disabled: #{'var(#{$rootWithVariant}-background-color-disabled)'};
+        };
+        --v-#{$variant}-background-color-hover: #{'var(#{$rootWithVariant}-background-color-hover)'};
+        --v-#{$variant}-background-color-active: #{'var(#{$rootWithVariant}-background-color-active)'};
+
+        //color
+        --v-#{$variant}-color: #{'var(#{$rootWithVariant}-color)'};
+        --v-#{$variant}-color-hover: #{'var(#{$rootWithVariant}-color-hover)'};
+        --v-#{$variant}-color-active: #{'var(#{#{$rootWithVariant}}-color-active)'};
     }
 }
