--- a/src/lib/packages/forms/src/Radio/RadioBase.scss
+++ b/src/lib/packages/forms/src/Radio/RadioBase.scss
@@ -2,6 +2,6 @@
     --clue-radio-base-border-radius: 50%;
     --clue-radio-base-checked-background-color-disabled: #F4F4F6;
 
-    --clue-radio-base-icon-background-color: #fff;
-    --clue-radio-base-checked-icon-background-color-disabled: #B0B2C0;
+    --clue-radio-base-thumb-background-color: var(--clue-checkbox-field-checked-thumb-background-color);
+    --clue-radio-base-checked-thumb-background-color-disabled: var(--clue-checkbox-field-checked-thumb-background-color-disabled);
 }
