style: fix colors in checkboxes

--- a/src/lib/packages/forms/src/Checkbox/CheckboxField.scss
+++ b/src/lib/packages/forms/src/Checkbox/CheckboxField.scss
@@ -8,8 +8,8 @@
     --clue-checkbox-field-border-width: 2px;
     //border color
     --clue-checkbox-field-border-color: #B0B2C0;
-    --clue-checkbox-field-border-color-hover: #958AC7;
-    --clue-checkbox-field-border-color-disabled: #B0B2C0;
+    --clue-checkbox-field-border-color-hover: #5B4C9F;
+    --clue-checkbox-field-border-color-disabled: #CCCED6;
     //border color checked
     --clue-checkbox-field-checked-border-color: transparent;
     --clue-checkbox-field-checked-border-color-hover: transparent;
@@ -17,7 +17,7 @@
     //background color
     --clue-checkbox-field-background-color: #fff;
     --clue-checkbox-field-background-color-hover: #fff;
-    --clue-checkbox-field-background-color-disabled: #fff;
+    --clue-checkbox-field-background-color-disabled: #F4F4F6;
     //background color checked
     --clue-checkbox-field-checked-background-color: #7567B6;
     --clue-checkbox-field-checked-background-color-hover: #5B4C9F;
