--- a/src/lib/packages/forms/src/Radio/RadioBase.scss
+++ b/src/lib/packages/forms/src/Radio/RadioBase.scss
@@ -1,6 +1,7 @@
 @mixin radio-base-vars(){
     --clue-radio-base-border-radius: 50%;
-    --clue-radio-base-checked-background-color-disabled: #F4F4F6;
+    
+    --clue-radio-base-checked-background-color-disabled: var(--clue-checkbox-field-background-color-disabled);
 
     --clue-radio-base-thumb-background-color: var(--clue-checkbox-field-checked-thumb-background-color);
     --clue-radio-base-checked-thumb-background-color-disabled: var(--clue-checkbox-field-checked-thumb-background-color-disabled);
