--- a/src/lib/packages/forms/src/Checkbox/CheckboxField.scss
+++ b/src/lib/packages/forms/src/Checkbox/CheckboxField.scss
@@ -1,32 +1,32 @@
 @mixin checkbox-field-vars() {
-    //size
-    --clue-checkbox-field-width: 20px;
-    --clue-checkbox-field-height: 20px;
-    //border radius
-    --clue-checkbox-field-border-radius: 5px;
-    //border width
-    --clue-checkbox-field-border-width: 2px;
-    //border color
-    --clue-checkbox-field-border-color: #B0B2C0;
-    --clue-checkbox-field-border-color-hover: #5B4C9F;
-    --clue-checkbox-field-border-color-disabled: #CCCED6;
-    //border color checked
-    --clue-checkbox-field-checked-border-color: transparent;
-    --clue-checkbox-field-checked-border-color-hover: transparent;
-    --clue-checkbox-field-checked-border-color-disabled: transparent;
-    //background color
-    --clue-checkbox-field-background-color: #fff;
-    --clue-checkbox-field-background-color-hover: #fff;
-    --clue-checkbox-field-background-color-disabled: #F4F4F6;
-    //background color checked
-    --clue-checkbox-field-checked-background-color: #7567B6;
-    --clue-checkbox-field-checked-background-color-hover: #5B4C9F;
-    --clue-checkbox-field-checked-background-color-disabled: #B4ACD7;
-    //thumb background color
-    --clue-checkbox-field-thumb-background-color: #7567B6;
-    --clue-checkbox-field-thumb-background-color-hover: #5B4C9F;
-    --clue-checkbox-field-thumb-background-color-disabled: #B0B2C0;
-    //thumb background color checked
-    --clue-checkbox-field-checked-thumb-background-color: #fff;
-    --clue-checkbox-field-checked-thumb-background-color-disabled: #B0B2C0;
+	//size
+	--clue-checkbox-field-width: 20px;
+	--clue-checkbox-field-height: 20px;
+	//border radius
+	--clue-checkbox-field-border-radius: 5px;
+	//border width
+	--clue-checkbox-field-border-width: 2px;
+	//border color
+	--clue-checkbox-field-border-color: #b0b2c0;
+	--clue-checkbox-field-border-color-hover: #5b4c9f;
+	--clue-checkbox-field-border-color-disabled: #ccced6;
+	//border color checked
+	--clue-checkbox-field-checked-border-color: transparent;
+	--clue-checkbox-field-checked-border-color-hover: transparent;
+	--clue-checkbox-field-checked-border-color-disabled: transparent;
+	//background color
+	--clue-checkbox-field-background-color: #fff;
+	--clue-checkbox-field-background-color-hover: #fff;
+	--clue-checkbox-field-background-color-disabled: #f4f4f6;
+	//background color checked
+	--clue-checkbox-field-checked-background-color: #7567b6;
+	--clue-checkbox-field-checked-background-color-hover: #5b4c9f;
+	--clue-checkbox-field-checked-background-color-disabled: #b4acd7;
+	//thumb background color
+	--clue-checkbox-field-thumb-background-color: #7567b6;
+	--clue-checkbox-field-thumb-background-color-hover: #5b4c9f;
+	--clue-checkbox-field-thumb-background-color-disabled: #b0b2c0;
+	//thumb background color checked
+	--clue-checkbox-field-checked-thumb-background-color: #fff;
+	--clue-checkbox-field-checked-thumb-background-color-disabled: #b0b2c0;
 }
