--- a/src/lib/packages/styles/src/vars/colors.scss
+++ b/src/lib/packages/styles/src/vars/colors.scss
@@ -5,9 +5,9 @@
     @include color-primary-generator(#5B4C9F);
     @include color-active-generator(#EECD47);
     @include color-generator('gray', #5F6377);
-    @include color-generator('sky', #C9E2EE);
-    @include color-generator('green', #839E44);
-    @include color-generator('coral', #D15A45);
+    @include color-generator('blue', #C9E2EE);
+    @include color-generator('positive', #839E44);
+    @include color-generator('negative', #D15A45);
 
     --clue-color-txt-placeholder: #B0B2C0;
 
