--- a/src/lib/packages/forms/src/Label/LabelName.scss
+++ b/src/lib/packages/forms/src/Label/LabelName.scss
@@ -4,5 +4,5 @@
     --clue-label-name-font-weight: 400;
     --clue-label-name-color: #484B5B;
     --clue-label-name-color-hover: #000;
-    --clue-label-name-color-disabled: #B0B2C0;
+    --clue-label-name-color-disabled: var(--clue-color-gray-200);
 }
