--- a/src/lib/packages/forms/src/TextField/TextFieldBase.sass
+++ b/src/lib/packages/forms/src/TextField/TextFieldBase.sass
@@ -14,7 +14,7 @@
 	--clue-text-field-base-border-color-disabled: var(--clue-color-border-disabled)
 
 	//background color
-	--clue-text-field-base-background-color: #fff
+	--clue-text-field-base-background-color: var(--clue-color-white)
 	--clue-text-field-base-background-color-disabled: var(--clue-color-bg-secondary)
 	--clue-text-field-base-background-color-readonly: var(--clue-color-bg-secondary)
 
@@ -50,7 +50,7 @@
 	--clue-text-field-base-color-disabled: var(--clue-color-txt-placeholder)
 
 	//placeholder color
-	--clue-text-field-base-placeholder-color: #9397A9
+	--clue-text-field-base-placeholder-color: var(--clue-color-gray-300)
 	--clue-text-field-base-placeholder-color-hover: #484B5B
 	--clue-text-field-base-placeholder-color-focus: #484B5B
 	--clue-text-field-base-placeholder-color-disabled: var(--clue-color-txt-placeholder)
