--- a/src/lib/packages/styles/src/generators/color.scss
+++ b/src/lib/packages/styles/src/generators/color.scss
@@ -1,16 +1,21 @@
 @use 'sass:color';
 @use 'sass:math';
 
+@function get-color-by-value($color, $value: 500) {
+    $percent: math.div(500 - $value, 1000);
+    $colorResult: color.adjust($color, $lightness: math.percentage($percent));
+
+    // @debug $lightnessValue, $percent, 46% + math.percentage($percent), $colorResult, color.hue($colorResult), color.saturation($colorResult), color.lightness($colorResult);
+    $colorString: 'hsl(#{math.round(color.hue($colorResult))}, #{math.round(color.saturation($colorResult))}, #{math.round(color.lightness($colorResult))})';
+    @return $colorString;
+}
+
 @mixin color-generator($name, $color) {
     // @debug 'color-generator start #{$name} #{$color} hue:#{color.hue($color)}';
     $root: '--clue-color-#{$name}';
     $lightnessList: 10, 50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 950, 990;
     @each $lightnessValue in $lightnessList {
-        $percent: math.div(500 - $lightnessValue, 1000);
-        $colorResult: color.adjust($color, $lightness: math.percentage($percent));
-
-        // @debug $lightnessValue, $percent, 46% + math.percentage($percent), $colorResult, color.hue($colorResult), color.saturation($colorResult), color.lightness($colorResult);
-        $colorString: 'hsl(#{math.round(color.hue($colorResult))}, #{math.round(color.saturation($colorResult))}, #{math.round(color.lightness($colorResult))})';
+        $colorString: get-color-by-value($color, $lightnessValue);
         // @debug $colorString;
         #{$root}-#{$lightnessValue}: #{$colorString};
     }
