--- a/src/lib/packages/base/src/IconButton/IconButton.sass
+++ b/src/lib/packages/base/src/IconButton/IconButton.sass
@@ -13,4 +13,4 @@
     --clue-icon-button-background-color-disabled-primary: #D3CFE8
     
     //background color
-    --clue-icon-button-color-disabled-primary: #958AC7
+    --clue-icon-button-color-disabled-primary: var(--clue-color-primary-300)
